components/1-nodejs/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: purple-mermaid-app
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: 1-nodejs
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: el1-nodejs
  namespace: pdave
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-1-nodejs
    weight: null
status: {}
